feat: add initial Android project structure with splash screen and main activity layout
- Added splash.png for the app's splash screen.
- Created activity_main.xml layout with a WebView.
- Defined adaptive icons for the app in mipmap resources.
- Added ic_launcher_background.xml for launcher background color.
- Created strings.xml for app name and other string resources.
- Defined styles.xml for app themes including a no-action-bar theme.
- Added file_paths.xml for external and cache paths.
- Implemented a basic unit test in ExampleUnitTest.java.
- Configured build.gradle and gradle.properties for project settings.
- Added gradle wrapper files for consistent Gradle versioning.
- Updated package.json and package-lock.json to include @capacitor/android.
- Enhanced app.component.html and app.component.ts for better structure and icon usage.
- Updated theme variables in variables.scss for custom color scheme.

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,35 @@
 // For information on how to create your own theme, please refer to:
 // https://ionicframework.com/docs/theming/
+:root {
+  /* Colores principales */
+  --ion-color-primary: #f99407;
+  --ion-color-primary-rgb: 249, 148, 7;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #dd6d02;
+  --ion-color-primary-tint: #ffb620;
+
+  /* Colores secundarios */
+  --ion-color-secondary: #ffce51;
+  --ion-color-secondary-rgb: 255, 206, 81;
+  --ion-color-secondary-contrast: #000000;
+  --ion-color-secondary-contrast-rgb: 0, 0, 0;
+  --ion-color-secondary-shade: #dd6d02;
+  --ion-color-secondary-tint: #ffe188;
+
+  /* Colores de acento */
+  --ion-color-tertiary: #b74b06;
+  --ion-color-tertiary-rgb: 183, 75, 6;
+  --ion-color-tertiary-contrast: #ffffff;
+  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
+  --ion-color-tertiary-shade: #94390c;
+  --ion-color-tertiary-tint: #dd6d02;
+
+  /* Backgrounds */
+  --ion-background-color: #fffaeb;
+  --ion-background-color-rgb: 255, 250, 235;
+
+  /* Texto */
+  --ion-text-color: #461702;
+  --ion-text-color-rgb: 70, 23, 2;
+}
