--- a/src/app/home/components/card-item/card-item.component.html
+++ b/src/app/home/components/card-item/card-item.component.html
@@ -1,22 +1,37 @@
-<ion-card (click)="onCardClick()" button="true">
+<ion-card (click)="onCardClick()" class="appointment-card">
   <ion-card-header>
-    <ion-card-subtitle class="golden-text-700">
-      {{ item?.category }}
-    </ion-card-subtitle>
-    <ion-card-title class="golden-text-950">
-      {{ item?.title }}
+    <ion-card-title>
+      {{ appointment.clientNames }} {{ appointment.clientSurnames }}
     </ion-card-title>
+    <ion-card-subtitle>
+      {{ appointment.brandDescription }} • {{ appointment.modelDescription }}
+    </ion-card-subtitle>
   </ion-card-header>
+
   <ion-card-content>
-    <p class="golden-text-900">{{ item?.description }}</p>
-    <ion-button
-      fill="clear"
-      color="primary"
-      size="small"
-      class="ion-margin-top"
-    >
-      Ver más
-      <ion-icon slot="end" name="chevron-forward"></ion-icon>
-    </ion-button>
+    <div class="row">
+      <ion-icon name="time-outline"></ion-icon>
+      <span>{{ appointment.hour }}</span>
+    </div>
+
+    <div class="row">
+      <ion-icon name="calendar-outline"></ion-icon>
+      <span>{{ appointment.date }}</span>
+    </div>
+
+    <div class="row">
+      <ion-icon name="call-outline"></ion-icon>
+      <span>{{ appointment.clientPhone }}</span>
+    </div>
+
+    <div class="row">
+      <ion-icon name="car-outline"></ion-icon>
+      <span>{{ appointment.chassis }}</span>
+    </div>
+
+    <div class="row type">
+      <ion-icon name="hammer-outline"></ion-icon>
+      <strong>{{ appointment.typeDescription }}</strong>
+    </div>
   </ion-card-content>
 </ion-card>
