--- a/src/app/home/components/card-item/card-item.component.html
+++ b/src/app/home/components/card-item/card-item.component.html
@@ -1,35 +1,44 @@
 <ion-card (click)="onCardClick()" class="appointment-card">
-  <ion-card-header>
-    <ion-card-title>
-      {{ appointment.clientNames }} {{ appointment.clientSurnames }}
-    </ion-card-title>
-    <ion-card-subtitle>
-      {{ appointment.brandDescription }} • {{ appointment.modelDescription }}
-    </ion-card-subtitle>
-  </ion-card-header>
+  <div class="header-row">
+    <div class="avatar">
+      {{ (appointment.clientNames || "")[0]
+      }}{{ (appointment.clientSurnames || "")[0] }}
+    </div>
 
-  <ion-card-content>
-    <div class="row">
+    <div class="title-group">
+      <h2 class="name">
+        {{ appointment.clientNames }} {{ appointment.clientSurnames }}
+      </h2>
+      <p class="vehicle">
+        {{ appointment.brandDescription }} • {{ appointment.modelDescription }}
+      </p>
+    </div>
+
+    <ion-icon name="chevron-forward" class="arrow"></ion-icon>
+  </div>
+
+  <ion-card-content class="info-grid">
+    <div class="info">
       <ion-icon name="time-outline"></ion-icon>
       <span>{{ appointment.hour }}</span>
     </div>
 
-    <div class="row">
+    <div class="info">
       <ion-icon name="calendar-outline"></ion-icon>
       <span>{{ appointment.date }}</span>
     </div>
 
-    <div class="row">
+    <div class="info">
       <ion-icon name="call-outline"></ion-icon>
       <span>{{ appointment.clientPhone }}</span>
     </div>
 
-    <div class="row">
+    <div class="info">
       <ion-icon name="car-outline"></ion-icon>
       <span>{{ appointment.chassis }}</span>
     </div>
 
-    <div class="row type">
+    <div class="info type">
       <ion-icon name="hammer-outline"></ion-icon>
       <strong>{{ appointment.typeDescription }}</strong>
     </div>
