--- a/src/app/home/components/search-bar/search-bar.component.html
+++ b/src/app/home/components/search-bar/search-bar.component.html
@@ -1,16 +1,3 @@
-<!-- <ion-searchbar
-  [(ngModel)]="searchTerm"
-  [placeholder]="placeholder"
-  [debounce]="debounce"
-  (ionInput)="onSearchChange($event.target.value)"
-  (ionClear)="onClear()"
-  mode="md"
-  showClearButton="focus"
-  animated="true"
-  class="material-search-bar"
->
-</ion-searchbar> -->
-
 <div class="search-wrapper">
   <ion-searchbar
     [(ngModel)]="searchTerm"
@@ -23,8 +10,9 @@
     show-clear-button="focus"
   ></ion-searchbar>
 
-  <!-- Loader dentro del Searchbar -->
-  <div class="search-loading" *ngIf="isLoading">
+  @if (isLoading) {
+  <div class="search-loading">
     <ion-spinner name="crescent"></ion-spinner>
   </div>
+  }
 </div>
