feat: update appointment handling and UI components; enhance appointment filtering and API integration

--- a/src/app/home/components/card-item/card-item.component.html
+++ b/src/app/home/components/card-item/card-item.component.html
@@ -20,7 +20,7 @@
   <ion-card-content class="info-grid">
     <div class="info">
       <ion-icon name="time-outline"></ion-icon>
-      <span>{{ appointment.hour }}</span>
+      <span>{{ appointmentHour }}</span>
     </div>
 
     <div class="info">
